Java8 compilation fixes